# mask-claude-plugin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
noirdoc/.claude-plugin/: plugin.json
noirdoc/commands/: noirdoc-allow.md  noirdoc-redact.md  noirdoc-reveal.md  noirdoc-setup.md  noirdoc-status.md
noirdoc/hooks/: guard.py  hooks.json
noirdoc/skills/noirdoc/: SKILL.md
noirdoc/templates/: config.toml
tests/: conftest.py  test_guard.py
